--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea/
+*.iml
 
 # User-specific stuff:
 .idea/workspace.xml
@@ -50,3 +52,7 @@ fabric.properties
 # modules.xml
 # .idea/misc.xml 
 # *.ipr
+
+
+#node
+node_modules/
