--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "tsc": "tsc",
     "tsc:w": "tsc -w"
   },
-
   "dependencies": {
     "@angular/common": "~2.2.0",
     "@angular/compiler": "~2.2.0",
@@ -23,13 +22,15 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.6.25",
+    "ng2-facebook-sdk": "0.4.0"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
     "concurrently": "^3.0.0",
     "lite-server": "^2.2.2",
+    "ng2-facebook-sdk": "^0.4.0",
     "typescript": "^2.0.3"
   }
 }
