--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
     "zone.js": "^0.6.25",
-    "ng2-facebook-sdk": "0.4.0"
+    "ng2-facebook-sdk": "0.4.0",
+    "angular2-truncate": "0.1.3"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
